--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <title>Devin Chen | Personal Website & Blog</title>
     <link rel="stylesheet" href="styles.css">
 
-    
+    <!-- Favicon setup -->
+    <link rel="icon" href="images/favicon_io/favicon.ico" type="image/x-icon">
 
+    <!-- PNG icons to account for variability in browsers/devices -->
+    <link rel="icon" href="images/favicon_io/favicon-16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="images/favicon_io/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="images/favicon_io/android-chrome-192x192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="images/favicon_io/android-chrome-512x512.png" sizes="512x512" type="image/png">
 
+    <!-- Apple Touch icon (for iOS based devices) -->
+    <link rel="apple-touch-icon" href="images/favicon_io/apple-touch-icon.png" sizes="180x180">
+
+    <!-- Web manifest (for PWA and modern browsers) -->
+    <link rel="manifest" href="images/favicon_io/site.webmanifest">
 </head>
 
 </html>
