--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
         <h1>Welcome to My Blog!</h1>
         <div class="grid-container">
 
-            <a href="piano.html" class="topic-card">
+            <a href="piano/piano.html" class="topic-card">
                 <div class="emoji" aria-label="Piano">🎹</div>
                 <h2 class="topic-title">Piano</h2>
                 <p class="topic-description">
