fixed improper file structure in blog.html that caused the blog pages not to load in browser

--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
                 </p>
             </a>
 
-            <a href="cybersecurity.html" class="topic-card">
+            <a href="cybersecurity/cybersecurity.html" class="topic-card">
                 <div class="emoji" aria-label="Cybersecurity">🛡️</div>
                 <h2 class="topic-title">Cybersecurity</h2>
                 <p class="topic-description">
@@ -79,7 +79,7 @@
                 </p>
             </a>
 
-            <a href="cooking.html" class="topic-card">
+            <a href="cooking/cooking.html" class="topic-card">
                 <div class="emoji" aria-label="Cooking">🍳</div>
                 <h2 class="topic-title">Devin's Kitchen</h2>
                 <p class="topic-description">
@@ -87,7 +87,7 @@
                 </p>
             </a>
 
-            <a href="volunteering.html" class="topic-card">
+            <a href="volunteering/volunteering.html" class="topic-card">
                 <div class="emoji" aria-label="Volunteering">💖</div>
                 <h2 class="topic-title">Volunteering</h2>
                 <p class="topic-description">
@@ -95,7 +95,7 @@
                 </p>
             </a>
             
-            <a href="fitness.html" class="topic-card">
+            <a href="fitness/fitness.html" class="topic-card">
                 <div class="emoji" aria-label="Fitness">💪</div>
                 <h2 class="topic-title">Fitness</h2>
                 <p class="topic-description">
@@ -103,7 +103,7 @@
                 </p>
             </a>
 
-            <a href="foreignlanguages.html" class="topic-card">
+            <a href="foreignlanguages/foreignlanguages.html" class="topic-card">
                 <div class="emoji" aria-label="Foreign Languages">🗣️</div>
                 <h2 class="topic-title">Foreign Languages</h2>
                 <p class="topic-description">
