added navjar.html and navbar.js to make navbar appear on each page and so that I don't have to change the code on each page. Dynamic changes. Also added a back to blog page and back to card class navigational back button to each article/card class.

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Me</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -31,6 +32,9 @@
     </head>
     <body>
 
+        <!-- Auto fetching of the navbar to make it appear on every page. -->
+        <div id="navbar"></div>
+
         <h1>Contact Me</h1>
 
         <!-- Email with Icon -->
@@ -44,5 +48,7 @@
             <img src="images/LI-In-Bug.png" alt="LinkedIn" width="40" height="40">
             <a href="https://www.linkedin.com/in/devin-chen-442751243/" target="_blank">My LinkedIn Profile</a>
         </div>
+        
+        <script src="navbar.js"></script>
     </body>
 </html>
