--- a/index.html
+++ b/index.html
@@ -23,17 +23,9 @@
     <link rel="manifest" href="images/favicon_io/site.webmanifest">
 </head>
 <body>
-    <!-- Navbar -->
-    <nav>
-        <div class="logo">Devin Chen</div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="portfolio.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-    </nav>
+
+    <!-- Auto fetching of the navbar to make it appear on every page. -->
+    <div id="navbar"></div>
 
     <!-- Main Content -->
     <section class="intro-container">
@@ -48,5 +40,7 @@
             <img src="images/homepage_image.jpg" alt="Photo of Devin Chen" />
         </div>
     </section>
+    
+    <script src="navbar.js"></script>
 </body>
 </html>
