--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Blog | Devin Chen</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
             body {
                 background-color: #121212;
@@ -60,6 +61,10 @@
     </head>
 
     <body>
+
+        <!-- Auto fetching of the navbar to make it appear on every page. -->
+        <div id="navbar"></div>
+
         <h1>Welcome to My Blog!</h1>
         <div class="grid-container">
 
@@ -112,5 +117,7 @@
             </a>
 
         </div>
+
+        <script src="navbar.js"></script>
     </body>
 </html>
