--- a/cooking/cooking.html
+++ b/cooking/cooking.html
@@ -61,6 +61,7 @@
     </head>
 
     <body>
+        <a href="../blog.html" style="color:#2979FF; text-decoration:underline;">← Back to Blog</a>
         <div class="emoji">🍳</div>
             <h1>Devin's Kitchen</h1>
             <p class="intro">Exploring recipes, tips, and culinary adventures.</p>
