--- a/cybersecurity/cybersecurity.html
+++ b/cybersecurity/cybersecurity.html
@@ -61,6 +61,7 @@
     </head>
 
     <body>
+        <a href="../blog.html" style="color:#2979FF; text-decoration:underline;">← Back to Blog</a>
         <div class="emoji">🛡️</div>
             <h1>Cybersecurity</h1>
             <p class="intro">Online safety guides, tools, and security insights.</p>
