--- a/fitness/fitness.html
+++ b/fitness/fitness.html
@@ -61,6 +61,7 @@
     </head>
 
     <body>
+        <a href="../blog.html" style="color:#2979FF; text-decoration:underline;">← Back to Blog</a>
         <div class="emoji">💪</div>
             <h1>Fitness</h1>
             <p class="intro">My journey towards better physical health.</p>
