--- a/foreignlanguages/foreignlanguages.html
+++ b/foreignlanguages/foreignlanguages.html
@@ -61,6 +61,7 @@
     </head>
 
     <body>
+        <a href="../blog.html" style="color:#2979FF; text-decoration:underline;">← Back to Blog</a>
         <div class="emoji">🗣️</div>
             <h1>Foreign Languages</h1>
             <p class="intro">Learning and practicing different languages from around the world.</p>
