--- a/piano/piano.html
+++ b/piano/piano.html
@@ -61,6 +61,7 @@
     </head>
 
     <body>
+        <a href="../blog.html" style="color:#2979FF; text-decoration:underline;">← Back to Blog</a>
         <div class="emoji">🎹</div>
             <h1>Piano</h1>
             <p class="intro">Tips, practice logs, and performance stories about piano.</p>
