--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Projects | Devin Chen</title>
+        <link rel="stylesheet" href="styles.css">
         <style>
             body {
                 background-color: #121212;
@@ -73,9 +74,12 @@
             }
         </style>
     </head>
-
-    <!-- Setting up the display cards -->
     <body>
+
+        <!-- Auto fetching of the navbar to make it appear on every page. -->
+        <div id="navbar"></div>
+        
+        <!-- Page Content -->
         <h1>My Portfolio</h1>
         <div class="grid-container">
 
@@ -91,5 +95,6 @@
                 </div>
             </a>
         </div>
+        <script src="navbar.js"></script>
     </body>
 </html>
