--- a/volunteering/volunteering.html
+++ b/volunteering/volunteering.html
@@ -61,6 +61,7 @@
     </head>
 
     <body>
+        <a href="../blog.html" style="color:#2979FF; text-decoration:underline;">← Back to Blog</a>
         <div class="emoji">💖</div>
             <h1>Volunteering</h1>
             <p class="intro">Stories and experiences from giving back to the community.</p>
